# tempfiles

./: README.md  pyproject.toml
.github/workflows/: poetry-publish.yml
src/: tempfiles.py
tempf/: __init__.py  tempfiles.py
tests/: test_tempfiles.py
