[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "tempf"
version = "1.0.0"
description = "Multiple temporary files in 1 line of code"
authors = ["Tom Herman <flipjumpproject@gmail.com>"]
license = "BSD-2-Clause-Simplified"
readme = "README.md"

repository = "https://github.com/tomhea/tempfiles"

keywords = ["esolang", "oisc", "assembly"]
classifiers = [
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: System :: Filesystems",
]


[tool.poetry.dependencies]
python = "^3.7"

# developement
pytest = { version = "^7.4.3", optional = true }

[tool.poetry.extras]
tests = ["pytest"]
